--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,5 @@
     "editor.fontFamily": "\"Droid Sans Mono\",Consolas,\"DejaVu Sans Mono\"",
     "editor.fontLigatures": true,
     "markdown.preview.lineHeight": 1,
-    "editor.fontWeight": "bold",
-    "editor.fontSize": 16
+    "editor.fontWeight": "bold"
 }
